feat(SplashActivity):1.complete SplashActivity logic.  2.add viewModelProvider in BaseActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Traveling-New</string>
     <string name="img">img</string>
+    <string name="skip_with_seconds">跳过 %d s</string>
 </resources>
